<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_alc"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/welcome_size"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:layout_marginBottom="150dp"
        />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnprofile"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="@dimen/button_text"
            android:text="@string/my_profile"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/button_buttom_margin"
            android:background="@drawable/mybutton"
            android:textAlignment="center" />
        <Button
            android:id="@+id/btnAbout"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/button_text"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="casual"
            android:background="@drawable/mybutton"
            android:text="@string/about_alc"
            />
    </LinearLayout>


</LinearLayout>